Port Pattern Checker to Forge 1.20.1